--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-12">
-                <div class="utf_featured_tab color-blue">
-                    <h3 class="utf_block_title"><span>Enterntainments</span></h3>
+                <div class="utf_featured_tab color-orange">
+                    <h3 class="utf_block_title"><span>Amakuru mashya</span></h3>
                     <div class="tab-content">
                         <div class="tab-pane active animated fadeInRight" id="tab_a">
                             <div class="row">
