--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,7 +41,6 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
     
     <!-- Google Fonts -->
     {% block sharethis %}
@@ -64,12 +63,10 @@
 
         <!-- Javascript Files -->
         <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-        <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.9.7/holder.min.js"></script>
+        <script async src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.9.7/holder.min.js"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/custom.js' %}"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        
         <script>
             window.dataLayer = window.dataLayer || [];
 
