--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,7 @@
     <link rel="mask-icon" href="https://byosehano.com{% static 'safari-pinned-tab.svg' %}" color="#e7851b">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta name="google-site-verification" content="xwK6KipA6VMe9lYQEZbPwTociOzJSy59qAEJ1iEil3Y" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171717652-1"></script>
     <script data-ad-client="ca-pub-3242762948116825" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     {% block metadatas %}
