--- a/templates/index.html
+++ b/templates/index.html
@@ -610,15 +610,15 @@
 <!--/ 2rd Block Wrapper End -->
 
 
-<!-- Ad Content Area Start -->
-<div class="utf_ad_content_area text-center utf_banner_area">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <img class="img-fluid" src="holder.js/1200x120?text=Advertise here now&auto=yes" alt="">
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Ad Content Area End -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- footer_ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3242762948116825"
+     data-ad-slot="6676441686"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 {% endblock content %}
