--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,6 +49,7 @@
     {% endblock sharethis %}
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,700&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&amp;display=swap" rel="stylesheet">
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3457da429a0f1ae07aea6dbcc/d3ebfa6c34986e7b84d9a426c.js");</script>
 </head>
 
 <body>
