--- a/templates/management/new_post.html
+++ b/templates/management/new_post.html
@@ -84,7 +84,7 @@
                                
                             </div>
                             <div class="form-group">
-                                {% if user.is_superuser %}
+                                {% if user.is_staff %}
                                     <div class="col-md-6">
                                         <label for="title">Article Status</label>
                                         {{ add_post.status }}
