--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,6 +53,21 @@
 </head>
 
 <body>
+    <div class="vfx-loader">
+        <div class="loader-wrapper">
+            <div class="loader-content">
+                <div class="loader-dot dot-1"></div>
+                <div class="loader-dot dot-2"></div>
+                <div class="loader-dot dot-3"></div>
+                <div class="loader-dot dot-4"></div>
+                <div class="loader-dot dot-5"></div>
+                <div class="loader-dot dot-6"></div>
+                <div class="loader-dot dot-7"></div>
+                <div class="loader-dot dot-8"></div>
+                <div class="loader-dot dot-center"></div>
+            </div>
+        </div>
+    </div>
     
     <div>
 
