--- a/templates/index.html
+++ b/templates/index.html
@@ -175,7 +175,7 @@
         <div class="row">
             <div class="col-lg-8 col-md-12">
                 <div class="utf_featured_tab color-blue">
-                    <h3 class="utf_block_title"><span>Enterntainments</span></h3>
+                    <h3 class="utf_block_title"><span>Imyidagaduro</span></h3>
                     <div class="tab-content">
                         <div class="tab-pane active animated fadeInRight" id="tab_a">
                             <div class="row">
