--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
-
+{% load user_agents %}
 <head>
     <meta name="author" content="">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
