--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load user_agents %}
 <head>
-    <meta name="author" content="">
+    <meta name="author" content="Byosehano">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
