--- a/templates/management/new_post.html
+++ b/templates/management/new_post.html
@@ -54,7 +54,20 @@
                     <div class="panel-heading">
                         <h4>Add Post</h4>
                     </div>
-                    
+                    {% if add_post.errors %}
+                        {% for field in add_post %}
+                            {% for error in field.errors %}
+                            <div class="alert alert-danger">
+                                <strong>{{ error|escape }}</strong>
+                            </div>
+                            {% endfor %}
+                        {% endfor %}
+                        {% for error in add_post.non_field_errors %}
+                            <div class="alert alert-danger">
+                                <strong>{{ error|escape }}</strong>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                     <div class="panel-body">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             {{ success_post|safe }}
