--- a/templates/article_category.html
+++ b/templates/article_category.html
@@ -28,7 +28,7 @@
                         <div class="col-md-6">
                             <div class="utf_post_block_style post-grid clearfix">
                                 <div class="utf_post_thumb"> <a href="{{ post.get_absolute_url }}"> <img class="img-fluid"
-                                            src="{{ post.thumbnail.url }}" alt="{{ post.title|title }}"> </a> </div>
+                                            src="{{ post.thumbnail.url }}" alt="{{ post.title|title }}" style="object-fit: cover;height: 200px;"> </a> </div>
                                 <a class="utf_post_cat" href="#">{{ post.category.name }}</a>
                                 <div class="utf_post_content">
                                     <h2 class="utf_post_title title-large"> <a href="{{ post.get_absolute_url }}">{{ post.title|title }}</a> </h2>
