--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -167,9 +167,20 @@
 
           <div class="col-lg-4 col-md-12">
             <div class="sidebar utf_sidebar_right">
+              <div class="widget m-bottom-0">
+                <h3 class="utf_block_title"><span>Like our Page</span></h3>
+                <div class="utf_newsletter_block">
+                  <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbyosehano%2F&tabs=pages&width=340&height=213&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="213" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                </div>
+
+                <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5f06beeccc9fba0019cdd26e&product=inline-reaction-buttons&cms=sop' async='async'></script>
+
+              </div>
+              
               <div class="widget">
                 <h3 class="utf_block_title"><span>Dukurikire</span></h3>
                 <ul class="social-icon">
+                  <li><a href="https://twitter.com/byosehano/" target="_blank"><i class="fa fa-twitter"></i></a></li>
                   <li><a href="https://fb.me/byosehano/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="https://instagram.com/byosehano/" target="_blank"><i class="fa fa-instagram"></i></a></li>
                   <li><a href="https://byosehano.com/feed" target="_blank"><i class="fa fa-rss"></i></a></li>
@@ -208,15 +219,7 @@
                 </ul>
               </div>
 
-              <div class="widget m-bottom-0">
-                <h3 class="utf_block_title"><span>Like our Page</span></h3>
-                <div class="utf_newsletter_block">
-                  <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbyosehano%2F&tabs=pages&width=340&height=213&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="213" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-                </div>
-
-                <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5f06beeccc9fba0019cdd26e&product=inline-reaction-buttons&cms=sop' async='async'></script>
-
-              </div>
+              
             </div>
           </div>
         </div>
