--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
 
                     <div class="utf_post_overaly_style clearfix">
                         <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid" src="{{ post.thumbnail.url }}"
-                                    alt=""> </a> </div>
+                                    alt="{{ post.title }}"> </a> </div>
                         <div class="utf_post_content"> <a class="utf_post_cat"
                                 href="#">{{ post.category.name|title }}</a>
                             <h2 class="utf_post_title"> <a href="{{ post.get_absolute_url }}"
@@ -449,7 +449,7 @@
                     {% if forloop.first %}
                     <div class="utf_post_overaly_style clearfix">
                         <div class="utf_post_thumb"> <a href="{{ post.get_absolute_url }}"> <img class="img-fluid"
-                                    src="{{ post.thumbnail.url }}" alt="{{ post.title }}"> </a> </div>
+                                    src="{{ post.thumbnail.url }}" alt="{{ post.title }}" style="object-fit: cover;height: 200px;"> </a> </div>
                         <div class="utf_post_content">
                             <h2 class="utf_post_title"> <a href="{{ post.get_absolute_url }}"
                                     title="{{ post.title }}">{{ post.title|slice:":50" }}...</a>
@@ -497,7 +497,7 @@
                     {% if forloop.first %}
                     <div class="utf_post_overaly_style clearfix">
                         <div class="utf_post_thumb"> <a href="{{ post.get_absolute_url }}"> <img class="img-fluid"
-                                    src="{{ post.thumbnail.url }}" alt="{{ post.title }}"> </a> </div>
+                                    src="{{ post.thumbnail.url }}" style="object-fit: cover;height: 200px;" alt="{{ post.title }}"> </a> </div>
                         <div class="utf_post_content">
                             <h2 class="utf_post_title"> <a href="{{ post.get_absolute_url }}"
                                     title="{{ post.title }}">{{ post.title|slice:":50" }}...</a>
@@ -545,7 +545,7 @@
                     {% if forloop.first %}
                     <div class="utf_post_overaly_style clearfix">
                         <div class="utf_post_thumb"> <a href="{{ post.get_absolute_url }}"> <img class="img-fluid"
-                                    src="{{ post.thumbnail.url }}" alt="{{ post.title }}"> </a> </div>
+                                    src="{{ post.thumbnail.url }}" style="object-fit: cover;height: 200px;" alt="{{ post.title }}"> </a> </div>
                         <div class="utf_post_content">
                             <h2 class="utf_post_title"> <a href="{{ post.get_absolute_url }}"
                                     title="{{ post.title }}">{{ post.title|slice:":50" }}...</a>
