--- a/templates/management/inc/header.html
+++ b/templates/management/inc/header.html
@@ -19,7 +19,7 @@
                 <li><a href="{% url 'management:post_report' %}">Posts Report</a></li>
                 {% if request.user.is_staff %}
                   <li>
-                      <a href="">Pending Posts</a>
+                      <a href="#">Pending Posts</a>
                   </li>
                 {% endif %}
             </ul>
