--- a/templates/management/layout.html
+++ b/templates/management/layout.html
@@ -162,7 +162,7 @@
                             <li class="dropdown-footer">See all the notifications</li>
                         </ul>
                     </li>
-                    <li class="list-box dropdown hidden-xs"><a href="#"><i class="icon-exit_to_app"></i></a>
+                    <li class="list-box dropdown hidden-xs"><a href="/accounts/logout"><i class="icon-exit_to_app"></i></a>
                     </li>
                     <li class="list-box hidden-lg hidden-md"><button type="button" id="toggleMenu"
                             class="toggle-menu"><i class="icon-menu"></i></button></li>
