--- a/templates/management/edit_post.html
+++ b/templates/management/edit_post.html
@@ -15,24 +15,8 @@
   </style>
   <div class="top-bar clearfix">
     <div class="page-title">
-        <h4>Form Elements</h4>
+        <h4>Edit Post - <a></a></h4>
     </div>
-    <ul class="sales-stats hidden-xs">
-        <li>
-            <div class="sales-block hidden-sm hidden-xs"><span id="sale_today"></span></div>
-            <div class="sales-details">
-                <h4>$<span>580</span> <i class="icon-arrow-up-right2 up"></i></h4>
-                <h5>Today's Income</h5>
-            </div>
-        </li>
-        <li>
-            <div class="sales-block hidden-sm hidden-xs"><span id="sale_weekly"></span></div>
-            <div class="sales-details">
-                <h4>$<span>7235</span> <i class="icon-arrow-down-right2 down"></i></h4>
-                <h5>Week's Income</h5>
-            </div>
-        </li>
-    </ul>
 </div>
 <div class="main-container">
     <div class="container-fluid">
