--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -50,7 +50,7 @@
                 <div class="squared-check"><input type="checkbox" value="None" id="remember" name="check"
                         checked=""><label for="remember"></label>
                     <div class="cb-label">Remember</div>
-                </div><a class="right_a" href="forgot-pwd.html">Forgot password?</a>
+                </div><a class="right_a" href="#">Forgot password?</a>
             </div>
         </div>
     </form>
