--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12 text-center">
-                <div class="utf_copyright_info"> <span>Copyright © 2020 All Rights Reserved <a href='byosehano.com'>Byosehano</a></span> </div>
+                <div class="utf_copyright_info"> <span>Copyright © 2020 All Rights Reserved <a href='{% url "web:index" %}'>Byosehano</a></span> </div>
             </div>
         </div>
         <div id="back-to-top" class="back-to-top">
